security-service-poc/security-service/deploy/deploy-all.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: security-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/security"
      route:
        - destination:
            port:
              number: 8080
            host: security-service-svc
---
apiVersion: v1
kind: Service
metadata:
  name: security-service-svc
  labels:
    app: security-service-lbl
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: security-service-lbl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-service-dpl
  labels:
    app: security-service-lbl
spec:
  selector:
    matchLabels:
      app: security-service-lbl
  replicas: 1
  template:
    metadata:
      labels:
        app: security-service-lbl
    spec:
      containers:
        - name: security-service
          image: shpboris/security-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
  kind: ConfigMap
  metadata:
    name: security-config
  data:
    KEYCLOAK_URL: http://keycloak:80
    REALM: mytest1
    CLIENT_ID: keycloak-integration-app
    CLIENT_SECRET: rtie2DB14I9oab6XvGGDWa4OpSd5cqdq
    REDIRECT_URL: http://localhost:30000/security/oauth2
    AUTH_URL: http://keycloak:80/realms/mytest1/protocol/openid-connect/auth
    TOKEN_URL: http://keycloak:80/realms/mytest1/protocol/openid-connect/token
    HOME_PAGE_URL: http://localhost:30000/frontend
