security-service-poc/security-service/deploy/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: security-service-vs
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/security"
    route:
    - destination:
        port:
          number: 8080
        host: security-service-svc
